# codemix-nlp

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: samples.json
examples/: analyze_text.py
scripts/: evaluate_lang_id.py
src/codemix/: __init__.py  api.py  cli.py  lang_id.py  normalize.py  pipeline.py  sentiment.py  transliterate.py
tests/: test_lang_id.py  test_pipeline.py  test_transliterate.py
