[project]
name = "codemix-nlp"
version = "0.1.0"
description = "NLP toolkit for analyzing Hindi-English code-mixed text"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Govind Pandey", email = "govindup63@gmail.com" }]
keywords = ["nlp", "code-mixing", "hindi", "multilingual", "language-identification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
codemix = "codemix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codemix"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
